--- a/public/css/custom.css
+++ b/public/css/custom.css
@@ -47,7 +47,7 @@ html, body {
 .navbarStyle
 {
   background-color: white;
-  border-bottom: solid 2px #44BBF8;
+  border-bottom: solid 2px #337ab7;
 }
 
 .btn-group-vertical>.btn:first-child:not(:last-child)
